; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/hhpcomp/chmc/extr_chmc.c__lzx_put_bytes.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/hhpcomp/chmc/extr_chmc.c__lzx_put_bytes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.chmcLzxInfo = type { %struct.TYPE_4__*, %struct.TYPE_3__* }
%struct.TYPE_4__ = type { i32, i32 }
%struct.TYPE_3__ = type { %struct.chmcSect0 }
%struct.chmcSect0 = type { i32 }

@_lzx_put_bytes.counter = internal global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i8*)* @_lzx_put_bytes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_lzx_put_bytes(i8* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.chmcLzxInfo*, align 8
  %8 = alloca %struct.chmcSect0*, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = bitcast i8* %10 to %struct.chmcLzxInfo*
  store %struct.chmcLzxInfo* %11, %struct.chmcLzxInfo** %7, align 8
  %12 = load %struct.chmcLzxInfo*, %struct.chmcLzxInfo** %7, align 8
  %13 = getelementptr inbounds %struct.chmcLzxInfo, %struct.chmcLzxInfo* %12, i32 0, i32 1
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  store %struct.chmcSect0* %15, %struct.chmcSect0** %8, align 8
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* @_lzx_put_bytes.counter, align 4
  %18 = add nsw i32 %17, %16
  store i32 %18, i32* @_lzx_put_bytes.counter, align 4
  %19 = load %struct.chmcLzxInfo*, %struct.chmcLzxInfo** %7, align 8
  %20 = getelementptr inbounds %struct.chmcLzxInfo, %struct.chmcLzxInfo* %19, i32 0, i32 0
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = load i8*, i8** %6, align 8
  %25 = load i32, i32* %5, align 4
  %26 = call i32 @write(i32 %23, i8* %24, i32 %25)
  store i32 %26, i32* %9, align 4
  %27 = load i32, i32* %9, align 4
  %28 = load %struct.chmcSect0*, %struct.chmcSect0** %8, align 8
  %29 = getelementptr inbounds %struct.chmcSect0, %struct.chmcSect0* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = add nsw i32 %30, %27
  store i32 %31, i32* %29, align 4
  %32 = load i32, i32* %9, align 4
  %33 = load %struct.chmcLzxInfo*, %struct.chmcLzxInfo** %7, align 8
  %34 = getelementptr inbounds %struct.chmcLzxInfo, %struct.chmcLzxInfo* %33, i32 0, i32 0
  %35 = load %struct.TYPE_4__*, %struct.TYPE_4__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = add nsw i32 %37, %32
  store i32 %38, i32* %36, align 4
  %39 = load i32, i32* %9, align 4
  ret i32 %39
}

declare dso_local i32 @write(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
